<resources>
    <string name="app_name">AppsDiscovery</string>
    <string name="explore">Explore</string>
    <string name="explore_kin">Explore Kin</string>
    <string name="alert_title">There are more ways to enjoy Kin!</string>
    <string name="alert_subtitle">Now you can earn and use your Kin in more of your favorite apps</string>
    <string name="not_now">Not now</string>
    <string name="app_not_installed">To get started, this app will need to be installed.</string>
    <string name="app_kin_receive_not_supported">Coming soon!</string>
    <string name="app_receive_kin">You can now move your Kin around.</string>
    <string name="app_action_send_kin">@string/send_kin</string>
    <string name="app_action_install">Google play</string>
    <string name="receiver_activity_title">Kin Ecosystem</string>
    <string name="receiver_activity_agree">I agree</string>
    <string name="receiver_activity_message">In order to send Kin, %1$s would like to receive your Kin account information (i.e. your public address) from %2$s.</string>
    <string name="learn_more">Learn more</string>
    <string name="discover_subtitle">Find the best experiences with Kin from other apps and send your Kin across apps.</string>
    <string name="discover_title">Kin is now across apps!</string>
    <string name="discover_title_no_data">Oh… Something isn\’t working</string>
    <string name="discover_subtitle_no_data">An unknown error occurred. Please close the page and try again later.</string>
    <string name="by_app">By %s</string>
    <string name="about_app">About %s</string>
    <string name="about_experience">About Experience</string>
    <string name="how_it_works">How it works</string>
    <string name="close">close</string>
    <string name="go_to_app">go to app</string>
    <string name="send_kin">Send Kin</string>
    <string name="total_kin_available">Total Kin available</string>
    <string name="transfer_sending_message">Sending %dKIN</string>
    <string name="transfer_complete_message">You’ve successfully sent %dKIN</string>
    <string name="transfer_failed_error">Transfer failed, try again later</string>
    <string name="transfer_failed_timeout">No confirmation for transfer yet, check your balance later.</string>
    <string name="transfer_receiver_service_error">This version is not supported. Update %s and try again.</string>
    <string name="transfer_connection_error">We couldn\'t establish a connection. Check back later.</string>
    <string name="send_kin_to">Send Kin to</string>

</resources>
