<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/KinAlertText.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/alert_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/KinAlertText.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/alert_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/positiveBtn"
        style="@style/kinTextButtonRounded.Purple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/discover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <TextView
        android:id="@+id/negativeBtn"
        style="@style/kinTextButtonRounded.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:layout_marginBottom="@dimen/padding_normal"
        android:text="@string/not_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positiveBtn" />

</android.support.constraint.ConstraintLayout>