<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kin_x_close_dark"
        app:layout_constraintBottom_toTopOf="@+id/delimiter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_text"
        style="@style/KinTextRegular.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiver_activity_title"
        android:textSize="@dimen/text_big_size"
        app:layout_constraintBottom_toTopOf="@+id/delimiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/delimiter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/kin_purple_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delimiter" />

    <TextView
        android:id="@+id/transfer_title"
        style="@style/KinTextRegular.Dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/receiver_activity_message"
        android:textSize="@dimen/text_regular_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/confirm_button"
        style="@style/kinTextButtonRounded.Purple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:enabled="false"
        android:text="@string/receiver_activity_agree"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfer_title"
        app:layout_constraintVertical_bias="0.85" />

</android.support.constraint.ConstraintLayout>