<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/transfer_bar_height"
    android:background="@color/dark"
    android:clickable="true">

    <TextView
        android:id="@+id/message"
        style="@style/KinTextRegular.Light.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/senderAppIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="sending some Kin"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="8dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/purple"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/receiverAppIcon"
        app:layout_constraintStart_toStartOf="@+id/senderAppIcon"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/senderAppIcon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/receiverAppIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:background="#ff0011" />

    <ImageView
        android:id="@+id/receiverAppIcon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#fff0" />

    <ImageView
        android:id="@+id/errorIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transfer_error_circle_icon"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/errorTitle"
        style="@style/KinTextRegular.Light.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="4sp"
        tools:text="@string/transfer_failed_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/errorClose"
        app:layout_constraintStart_toEndOf="@+id/errorIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/errorClose"
        style="@style/KinTextRegular.Light.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_normal"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/completeMessage"
        style="@style/KinTextRegular.Light.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/completeClose"
        app:layout_constraintEnd_toStartOf="@+id/gotoApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="complete sending Kin"
        tools:visibility="gone" />


    <ImageView
        android:id="@+id/completeAppIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/gotoApp"
        app:layout_constraintEnd_toEndOf="@+id/gotoApp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gotoApp"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/completeClose"
        style="@style/KinTextRegular.Light.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completeMessage"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/gotoApp"
        style="@style/KinTextRegular.Light.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/go_to_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completeAppIcon"
        tools:visibility="gone" />

    <android.support.constraint.Group
        android:id="@+id/transferring_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="message,progressBar,senderAppIcon,receiverAppIcon"
        tools:visibility="visible" />

    <android.support.constraint.Group
        android:id="@+id/transfer_complete_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="completeMessage,completeAppIcon,completeClose,gotoApp" />

    <android.support.constraint.Group
        android:id="@+id/transfer_failed_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="errorIcon,errorTitle,errorClose" />

</android.support.constraint.ConstraintLayout>